--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -1,3 +1,127 @@
-/* 
-    General Styles used on every website (Don't Repeat Yourself)
-*/
+/* General Styles */
+
+* {
+
+    font-weight: bold;
+}
+
+body::-webkit-scrollbar {
+    width: 8px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: linear-gradient(180deg, #c9b505 0%, #000000 100%);
+    border-radius: 80px;
+}
+
+body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+.navbar {
+    width: 100%;
+    height: 180px;
+    display: flex;
+    justify-content: center;
+    /* Center the navbar content */
+    align-items: center;
+    /* Center elements vertically */
+    padding: 0;
+    position: relative;
+    /* Allows positioning children absolutely */
+    box-sizing: border-box;
+    /* Ensure padding doesn't affect total width */
+}
+
+.Wars {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    justify-content: center;
+    width: 330px;
+    height: 180px;
+}
+
+.logo {
+    width: 100%;
+    height: 100%;
+    padding-inline: 10px;
+    image-rendering: auto;
+    object-fit: cover;
+    font-weight: bold;
+    font-style: inherit;
+}
+
+.social-media {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 260px;
+    padding: 15px;
+    margin-bottom: 320px;
+}
+
+.social-media a {
+    color: rgb(95, 91, 91);
+    background: none;
+    font-size: 11px;
+    transition: text-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.social-media a:hover {
+    filter: brightness(300%);
+    filter: contrast(300%);
+    color: #FFCA2C;
+    transform: scale(1.2);
+    /* Escala el icono al 120% en hover */
+}
+
+.dropdown-container {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 10px;
+    display: flex;
+    gap: 10px;
+    margin-right: 20px;
+    /* Add spacing between dropdowns */
+}
+
+.dropdown-menu {
+    width: 200px;
+    text-align: center;
+    align-items: center;
+}
+
+.container-name {
+    display: flex;
+    width: 120px;
+    padding: 10px;
+}
+
+
+
+.delete {
+    border: none;
+    margin-left: 35px;
+    padding: 0;
+    width: 0;
+    height: 0;
+    color: black;
+}
+
+
+.delete:hover {
+    color: red;
+}
+
+.form-login{
+    margin-top: 50px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    width: 25rem;
+}
